--- a/public/tuiter/explore/index-a4-challenge.html
+++ b/public/tuiter/explore/index-a4-challenge.html
@@ -51,7 +51,7 @@
               <li id="notifications" class="nav-item">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-bell-fill bi-bell"></i>
+                    <i class="far fa-bell"></i>
                   </div>
                   <div class="d-inline-flex ms-3 d-none d-sm-block">
                     Notifications
@@ -61,7 +61,7 @@
               <li id="messages" class="nav-item">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-envelope-fill bi bi-envelope"></i>
+                    <i class="far fa-envelope"></i>
                   </div>
                   <div class="d-inline-flex ms-3 d-none d-sm-block">
                     Messages
@@ -71,7 +71,7 @@
               <li id="bookmarks" class="nav-item">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-bookmark-fill bi-bookmark"></i>
+                    <i class="far fa-bookmark"></i>
                   </div>
                   <div class="d-inline-flex ms-3 d-none d-sm-block">
                     Bookmarks
@@ -81,7 +81,7 @@
               <li id="lists" class="nav-item">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-list-task"></i>
+                    <i class="fas fa-list-ul"></i>
                   </div>
                   <div class="d-inline-flex ms-3 d-none d-sm-block">
                     Lists
@@ -91,7 +91,7 @@
               <li id="profile" class="nav-item">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-person-fill bi bi-person"></i>
+                    <i class="far fa-user"></i>
                   </div>
                   <div class="d-inline-flex ms-3 d-none d-sm-block">
                     Profile
@@ -539,7 +539,7 @@
               <li id="notifications" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-bell-fill bi-bell"></i>
+                    <i class="far fa-bell"></i>
                   </div>
                   <div class="d-inline-flex ms-3 d-sm-none d-md-block">
                     Notifications
@@ -549,7 +549,7 @@
               <li id="messages" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-envelope-fill bi bi-envelope"></i>
+                    <i class="far fa-envelope"></i>
                   </div>
                   <div class="d-inline-flex ms-3 d-sm-none d-md-block">
                     Messages
@@ -559,7 +559,7 @@
               <li id="bookmarks" class="nav-item">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-bookmark-fill bi-bookmark"></i>
+                    <i class="far fa-bookmark"></i>
                   </div>
                   <div class="d-inline-flex ms-3 d-sm-none d-md-block">
                     Bookmarks
@@ -569,7 +569,7 @@
               <li id="lists" class="nav-item">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-list-task"></i>
+                    <i class="fas fa-list-ul"></i>
                   </div>
                   <div class="d-inline-flex ms-3 d-sm-none d-md-block">
                     Lists
@@ -579,7 +579,7 @@
               <li id="profile" class="nav-item">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-person-fill bi bi-person"></i>
+                    <i class="far fa-user"></i>
                   </div>
                   <div class="d-inline-flex ms-3 d-sm-none d-md-block">
                     Profile
@@ -1027,7 +1027,7 @@
               <li id="notifications" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-bell-fill bi-bell"></i>
+                    <i class="far fa-bell"></i>
                   </div>
                   <div class="d-inline-flex ms-3 d-md-none d-lg-block">
                     Notifications
@@ -1037,7 +1037,7 @@
               <li id="messages" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-envelope-fill bi bi-envelope"></i>
+                    <i class="far fa-envelope"></i>
                   </div>
                   <div class="d-inline-flex ms-3 d-md-none d-lg-block">
                     Messages
@@ -1047,7 +1047,7 @@
               <li id="bookmarks" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-bookmark-fill bi-bookmark"></i>
+                    <i class="far fa-bookmark"></i>
                   </div>
                   <div class="d-inline-flex ms-3 d-md-none d-lg-block">
                     Bookmarks
@@ -1057,7 +1057,7 @@
               <li id="lists" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-list-task"></i>
+                    <i class="fas fa-list-ul"></i>
                   </div>
                   <div class="d-inline-flex ms-3 d-md-none d-lg-block">
                     Lists
@@ -1067,7 +1067,7 @@
               <li id="profile" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-person-fill bi bi-person"></i>
+                    <i class="far fa-user"></i>
                   </div>
                   <div class="d-inline-flex ms-3 d-md-none d-lg-block">
                     Profile
@@ -1515,7 +1515,7 @@
               <li id="notifications" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-bell-fill bi-bell"></i>
+                    <i class="far fa-bell"></i>
                   </div>
                   <div class="d-inline-flex ms-3 d-lg-none d-md-block">
                     Notifications
@@ -1525,7 +1525,7 @@
               <li id="messages" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-envelope-fill bi bi-envelope"></i>
+                    <i class="far fa-envelope"></i>
                   </div>
                   <div class="d-inline-flex ms-3 d-lg-none d-md-block">
                     Messages
@@ -1535,7 +1535,7 @@
               <li id="bookmarks" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-bookmark-fill bi-bookmark"></i>
+                    <i class="far fa-bookmark"></i>
                   </div>
                   <div class="d-inline-flex ms-3 d-lg-none d-md-block">
                     Bookmarks
@@ -1545,7 +1545,7 @@
               <li id="lists" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-list-task"></i>
+                    <i class="fas fa-list-ul"></i>
                   </div>
                   <div class="d-inline-flex ms-3 d-lg-none d-md-block">
                     Lists
@@ -1555,7 +1555,7 @@
               <li id="profile" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-person-fill bi bi-person"></i>
+                    <i class="far fa-user"></i>
                   </div>
                   <div class="d-inline-flex ms-3 d-lg-none d-md-block">
                     Profile
@@ -2000,7 +2000,7 @@
               <li id="notifications" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-bell-fill bi-bell"></i>
+                    <i class="far fa-bell"></i>
                   </div>
                   <div class="d-inline-flex ms-3">Notifications</div></a
                 >
@@ -2008,7 +2008,7 @@
               <li id="messages" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-envelope-fill bi bi-envelope"></i>
+                    <i class="far fa-envelope"></i>
                   </div>
                   <div class="d-inline-flex ms-3">Messages</div></a
                 >
@@ -2016,7 +2016,7 @@
               <li id="bookmarks" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-bookmark-fill bi-bookmark"></i>
+                    <i class="far fa-bookmark"></i>
                   </div>
                   <div class="d-inline-flex ms-3">Bookmarks</div></a
                 >
@@ -2024,7 +2024,7 @@
               <li id="lists" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-list-task"></i>
+                    <i class="fas fa-list-ul"></i>
                   </div>
                   <div class="d-inline-flex ms-3">Lists</div></a
                 >
@@ -2032,7 +2032,7 @@
               <li id="profile" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-person-fill bi bi-person"></i>
+                    <i class="far fa-user"></i>
                   </div>
                   <div class="d-inline-flex ms-3">Profile</div></a
                 >
@@ -2473,7 +2473,7 @@
               <li id="notifications" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-bell-fill bi-bell"></i>
+                    <i class="far fa-bell"></i>
                   </div>
                   <div class="d-inline-flex ms-3">Notifications</div></a
                 >
@@ -2481,7 +2481,7 @@
               <li id="messages" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-envelope-fill bi bi-envelope"></i>
+                    <i class="far fa-envelope"></i>
                   </div>
                   <div class="d-inline-flex ms-3">Messages</div></a
                 >
@@ -2489,7 +2489,7 @@
               <li id="bookmarks" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-bookmark-fill bi-bookmark"></i>
+                    <i class="far fa-bookmark"></i>
                   </div>
                   <div class="d-inline-flex ms-3">Bookmarks</div></a
                 >
@@ -2497,7 +2497,7 @@
               <li id="lists" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-list-task"></i>
+                    <i class="fas fa-list-ul"></i>
                   </div>
                   <div class="d-inline-flex ms-3">Lists</div></a
                 >
@@ -2505,7 +2505,7 @@
               <li id="profile" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
                   <div class="d-inline-flex">
-                    <i class="bi bi-person-fill bi bi-person"></i>
+                    <i class="far fa-user"></i>
                   </div>
                   <div class="d-inline-flex ms-3">Profile</div></a
                 >
