--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,16 @@
           >Assignment 4 Challenge</a
         >
       </li>
+      <li><a href="/labs/a5/index.html">Assignment 5 Labs</a></li>
+      <li>
+        <a href="/labs/a5/todos/index.html"
+          >Assignment 5 Labs - 2.24: Creating a TODO List</a
+        >
+      </li>
+      <li><a href="/tuiter/explore/index.html">Assignment 5 Tuiter</a></li>
+      <li>
+        <a href="/tuiter/HomeScreen/index.html">Assignment 5 Challenge</a>
+      </li>
       <li><a href="/tuiter/navigation.html">Tuiter Project</a></li>
     </ul>
   </body>
