--- a/public/tuiter/HomeScreen/index.html
+++ b/public/tuiter/HomeScreen/index.html
@@ -19,10 +19,10 @@
     ></script>
 
     <meta charset="UTF-8" />
-    <title>Explore screen</title>
+    <title>Home screen</title>
   </head>
   <body>
-    <div class="container" id="wd-explore"></div>
+    <div class="container" id="wd-home"></div>
     <script src="index.js" type="module"></script>
   </body>
 </html>
