--- a/public/tuiter/explore/index-a4-tuiter.html
+++ b/public/tuiter/explore/index-a4-tuiter.html
@@ -76,7 +76,7 @@
                     width="16"
                     height="16"
                     fill="currentColor"
-                    class="bi bi-three-dots"
+                    class="far fa-circle"
                     viewBox="0 0 16 16"
                   >
                     <path
