--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -10,7 +10,7 @@
         <a href="home.html">Home</a>
       </li>
       <li>
-        <a href="explore/index-a4-challenge.html">Explore</a>
+        <a href="explore/index.html">Explore</a>
       </li>
       <li>
         <a href="notifications.html">Notifications</a>
